<resources>
<!--    <string name="app_name">沙丘分割</string>-->
<!--    <string name="upload">上传</string>-->
<!--    <string name="interactive">交互</string>-->
<!--    <string name="download">保存</string>-->
<!--    <string name="img_description">此处展示上传的图片</string>-->
<!--    <string name="top_line">连接线</string>-->
<!--    <string name="top_rollback">撤回一步</string>-->
<!--    <string name="top_exit">保存退出</string>-->
<!--    <string name="top_interested">兴趣点</string>-->
<!--    <string name="top_uninterested">非兴趣点</string>-->
<!--    <string name="top_clear">清空所有操作</string>-->
<!--    <string name="top_moveImg">调整图片</string>-->
<!--    <string name="top_pen">画笔</string>-->
<!--    <string name="img_save">此处展示保存的绘制结果</string>-->
<!--    <string name="top_finish">完成识别</string>-->
<!--    <string name="ip">确定ip</string>-->
<!--    <string name="title">沙丘分割应用</string>-->
<!--    <string name="ip_tip">请输入ip和端口以连接后端模型</string>-->
<!--    <string name="ip_hint">例：192.168.1.1:5000</string>-->
<!--    <string name="btn_set">确认(请测试成功后点我)</string>-->
<!--    <string name="btn_test">测试</string>-->

    <string name="app_name">dune segment</string>
    <string name="upload">upload</string>
    <string name="interactive">Interact</string>
    <string name="download">save</string>
    <string name="img_description">image shows here</string>
    <string name="top_line">polyline</string>
    <string name="top_rollback">undo one step</string>
    <string name="top_exit">save and exit</string>

    <string name="top_interested">positive dot</string>
    <string name="top_uninterested">negative dot</string>

    <string name="top_point">click</string>
<!--    <string name="top_switch_label">switch label</string>-->
    <string name="positive">positive</string>
    <string name="negative">negative</string>
    <string name="top_clear">clear all</string>
    <string name="top_moveImg">adjusting image</string>
    <string name="top_pen">painting brush</string>
    <string name="img_save">results show here</string>
    <string name="top_finish">finish mask</string>
    <string name="ip">confirm ip</string>
    <string name="title">dune segment App</string>
    <string name="ip_tip">input your ip and port here</string>
    <string name="ip_hint">example: 192.168.1.1:5000</string>
    <string name="btn_set">confirm(please click after testing)</string>
    <string name="btn_test">connection test</string>

    <string name="default_ip">10.29.49.232:5000</string>
</resources>